--- a/Automation2023/POM_Cucumber_Maven_SeleniumFramework/CucumberPOM/pom.xml
+++ b/Automation2023/POM_Cucumber_Maven_SeleniumFramework/CucumberPOM/pom.xml
@@ -63,6 +63,20 @@
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-testng</artifactId>
+			<version>7.11.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.7.1</version>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
@@ -88,6 +102,10 @@
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.1</version>
+					<configuration>
+						<parallel>methods</parallel>
+						<threadCount>4</threadCount>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
